updated index page with new png, added all htmls to src

--- a/phantom-bootstrap-main/source/interests.html
+++ b/phantom-bootstrap-main/source/interests.html
@@ -81,35 +81,88 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 <main class="site-wrapper">
   <div class="pt-table">
-    <div class="pt-tablecell page-welcome relative">
+    <div class="pt-tablecell page-works relative">
       <!-- .close -->
       <a href="./" class="page-close"><i class="tf-ion-close"></i></a>
       <!-- /.close -->
 
-      <div class="author-image-large">
-        <img src="images/author.png" alt="">
-      </div>
-
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-md-6 col-lg-7">
-            <div class="page-title">
-              <h2>David <span class="primary">ramon</span> <span class="title-bg">About</span></h2>
-              <p>A product designer from England, who focuses on interactive design & A freelance designer focusing on typography & clean interfaces. Also works in dignissimos non quos Google..</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores repellendus corporis, tenetur inventore perferendis reprehenderit autem dignissimos non quos unde eveniet sapiente necessitatibus consequuntur ea ab dolore.</p>
+          <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+            <div class="page-title text-center">
+              <h2>My <span class="primary">interests</span> <span class="title-bg">interests</span></h2>
+              <p>In my free time I like to work with my hands, participate in outdoor activities, and learn new crafts.</p>
             </div>
           </div>
+        </div> <!-- /.row -->
+
+        <div class="row isotope-gutter">
+          <div class="col-xs-12 col-sm-6 col-md-4 Photography">
+            <figure class="works-item">
+              <img src="images/interests/int3.jpg" alt="">
+              <div class="overlay"></div>
+              <figcaption class="works-inner">
+                <h4>Surfing with friends</h4>
+                <p>Tofino, British Columbia</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 Surfboard-Shaping">
+            <figure class="works-item">
+              <img src="images/interests/int5.jpeg" alt="">
+              <div class="overlay"></div>
+              <figcaption class="works-inner">
+                <h4>Big wall climbing</h4>
+                <p>Pemberton, British Columbia</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 Music">
+            <figure class="works-item">
+              <img src="images/interests/int6.jpg" alt="">
+              <div class="overlay"></div>
+              <figcaption class="works-inner">
+                <h4>Slacklining on the horizon</h4>
+                <p>North Vancouver, British Columbia</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 Photography">
+            <figure class="works-item">
+              <img src="images/interests/int1.jpeg" alt="">
+              <div class="overlay"></div>
+              <figcaption class="works-inner">
+                <h4>Backcountry skiing with my best friend</h4>
+                <p>Cascade Mountains, British Columbia</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 Surfboard-Shaping">
+            <figure class="works-item">
+              <img src="images/interests/int4.jpg" alt="">
+              <div class="overlay"></div>
+              <figcaption class="works-inner">
+                <h4>The bike</h4>
+                <p>I like taking this thing apart almost as much <br> as I like riding it</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 Photography">
+            <figure class="works-item">
+              <img src="images/interests/int2.jpg" alt="">
+              <div class="overlay"></div>
+              <figcaption class="works-inner">
+                <h4>Spinning over the city</h4>
+                <p>Grouse Mountain, British Columbia</p>
+              </figcaption>
+            </figure>
+          </div>
+         
         </div> <!-- /.row -->
       </div> <!-- /.container -->
 
       <nav class="page-nav clear">
-  <div class="container">
-    <div class="flex flex-middle space-between">
-      <span class="prev-page"><a href="index.html" class="link">&larr; Prev Page</a></span>
-      <span class="copyright">Copyright &copy; 2021, Designed &amp; Developed by <a href="https://themefisher.com/">Themefisher</a>.</span>
-      <span class="next-page"><a href="about.html" class="link">Next Page &rarr;</a></span>
-    </div>
-  </div>
+
   <!-- /.page-nav -->
 </nav>
       <!-- /.container -->
