changed version of index

--- a/phantom-bootstrap-main/source/index.html
+++ b/phantom-bootstrap-main/source/index.html
@@ -91,7 +91,16 @@ FACEBOOK: https://www.facebook.com/themefisher
         <div class="row">
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title home text-center">
-              <img src="images/favicon.png" alt="">
+              <style>
+                .img-container {
+                  text-align: center;
+                  display: block;
+                  object-fit: contain;
+                }
+              </style>
+              <span class = "img-container"> 
+                <img src="images/name.png" alt="" width = "700" height = "100"> 
+                </span>
               <p>A recent graduate from Vancouver looking for work in CS</p>
             </div>
 
