--- a/phantom-bootstrap-main/theme/listening.html
+++ b/phantom-bootstrap-main/theme/listening.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+
+<!--
+ // WEBSITE: https://themefisher.com
+ // TWITTER: https://twitter.com/themefisher
+ // FACEBOOK: https://www.facebook.com/themefisher
+ // GITHUB: https://github.com/themefisher/
+-->
+
 <html lang="zxx">
 <head>
 
